# seng1270-digital-twin

./: App.cpp  App.h  CMakeLists.txt  MainFrame.cpp  MainFrame.h  Patient.h  PatientPage.h  Person.h  ProfilePage.h  README.md  StaffPage.h  StatusPage.h  TestPatients.csv  TestPatientsEnc.csv  TestStaff.csv  TestStaffEnc.csv  Time.h  TimeReference.h  VitalVitals.vcxproj  VitalVitals.vcxproj.filters  enc.cpp  encdec.h  encryption.h  example.cpp  examplefile.csv  examplepatients.csv  examplepatientsencrypted.csv  exampleprofiles.cpp  examplestaff.csv  examplestaffprofile.csv  filehandler.h  generate_database.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  patientprofile.h  patients.csv  profile.h  profiles.h  (+10 more)
VitalVitals/: VitalVitals.slnx  VitalVitals.vcxproj  VitalVitals.vcxproj.filters  profiles.h  simulation.cpp
VitalVitals/VitalVitals/x64/Release/: VitalVitals.iobj  VitalVitals.ipdb
VitalVitals/VitalVitals/x64/Release/VitalVitals.tlog/: CL.command.1.tlog  CL.read.1.tlog  Cl.items.tlog  link.command.1.tlog
VitalVitals/x64/Release/: VitalVitals.exe.recipe  VitalVitals.iobj  VitalVitals.ipdb
VitalVitals/x64/Release/VitalVitals.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  VitalVitals.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
classes/: Condition.h  PatientRecord.h  Time.h
cryptopp/: Readme.txt  config_asm.h  cryptlib.vcxproj.filters  fipstest.cpp  integer.cpp  zdeflate.cpp
cryptopp/x64/cryptlib/Release/cryptlib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  Lib.command.1.tlog  (+4 more)
x64/Debug/: vc145.idb
x64/Debug/VitalVitals.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  VitalVitals.lastbuildstate
x64/Release/: VitalVitals.exe.recipe
x64/Release/VitalVitals.tlog/: CL.write.1.tlog  VitalVitals.lastbuildstate  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
